# js8call

./: .gitignore  APRSISClient.cpp  AttenuationSlider.cpp  AttenuationSlider.hpp  AudioDecoder.cpp  AudioDevice.hpp  Bands.cpp  CMakeCPackOptions.cmake.in  CMakeLists.txt  Configuration.cpp  Configuration.hpp  Configuration.ui  Decoder.cpp  Detector.cpp  Detector.hpp  Distance.cpp  Distance.hpp  DriftingDateTime.cpp  DriftingDateTime.h  EventFilter.cpp  EventFilter.hpp  Flatten.cpp  Flatten.hpp  FocusEater.cpp  FocusEater.hpp  FrequencyList.cpp  Geodesic.cpp  Geodesic.hpp  GetUserId.cpp  HRDTransceiver.cpp  HRDTransceiver.hpp  HamlibTransceiver.cpp  IARURegions.cpp  INSTALL  Inbox.cpp  Inbox.h  JS8.cpp  JS8.hpp  JS8Submode.cpp  JS8Submode.hpp  (+103 more)
Audio/: BWFFile.cpp
CMake/Modules/: FindUsb.cmake  Findhamlib.cmake
Darwin/: Info.plist.in
docker/: .dockerignore  Dockerfile  Dockerfile.base  Dockerfile.hamlib  Dockerfile.runtime  README.md  docker-build-instructions.md  docker-build.sh  docker-compose.yml  docker-run.sh
lib/: decoder.f90  flat4.f90  four2a.f90  js8a_decode.f90  js8a_module.f90  js8b_decode.f90  js8b_module.f90  js8c_decode.f90  js8c_module.f90  js8e_decode.f90  js8e_module.f90  js8i_decode.f90  js8i_module.f90  jt9.f90  jt9a.f90  jt9com.f90  nhash.c  nuttal_window.f90  pctile.f90  readwav.f90  refspectrum.f90  stdmsg.f90
lib/ft8/: bpdecode174.f90  extractmessage174.f90  foxgen.f90  osd174.f90
lib/js8/: baselinejs8.f90  genjs8.f90  get_spectrum_baselinejs8.f90  js8a_params.f90  js8b_params.f90  js8c_params.f90  js8dec.f90  js8e_params.f90  js8i_params.f90  ldpcsim174js8a.f90  ldpcsim174js8b.f90  ldpcsim174js8c.f90  ldpcsim174js8e.f90  ldpcsim174js8i.f90  subtractjs8.f90  syncjs8.f90  syncjs8d.f90
logbook/: adif.cpp  adif.h  countriesworked.cpp  countriesworked.h  logbook.cpp
